adding connection block to prefect

--- a/week_2_workflow_orchestration/prefect_intro/Dockerfile
+++ b/week_2_workflow_orchestration/prefect_intro/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.9
 
 RUN apt-get install wget
-RUN pip install pandas sqlalchemy psycopg2 prefect-gcp[cloud_storage] protobuf pyarrow pandas-gbq
+RUN pip install pandas sqlalchemy psycopg2 prefect-gcp[cloud_storage] protobuf pyarrow pandas-gbq prefect_sqlalchemy
 
 WORKDIR /app
 
