--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ week_1_basics_n_setup/1_terraform_gcp/google-cloud-cli-433.0.1-linux-x86_64.tar.
 *.tfstate
 week_2_workflow_orchestration/etl_w_gcpn_prefect/yellow_tripdata_2021-01.parquet
 week_2_workflow_orchestration/etl_w_gcpn_prefect/.prefectignore
+week_2_workflow_orchestration/etl_w_gcpn_prefect/flows/.prefectignore
 # Folders #
 ###########
 _venv/
@@ -62,3 +63,4 @@ week_2_workflow_orchestration/data/
 week_2_workflow_orchestration/etl_w_gcpn_prefect/data/
 week_2_workflow_orchestration/etl_w_gcpn_prefect/__pycache__/
 week_2_workflow_orchestration/prefect_intro/output.csv
+week_2_workflow_orchestration/etl_w_gcpn_prefect/flows/__pycache__/
