--- a/week_2_workflow_orchestration/etl_w_gcpn_prefect/etl_parent_flow-deployment.yaml
+++ b/week_2_workflow_orchestration/etl_w_gcpn_prefect/etl_parent_flow-deployment.yaml
@@ -1,15 +1,18 @@
 ###
 ### A complete description of a Prefect Deployment for flow 'etl-parent-flow'
 ###
-name: Parameterized ETL
+name: etl2
 description: null
-version: e7cdee8a636f59e19581be6be037c4bc
+version: 9aea668270fe58e067786cbfd95f7292
 # The work queue that will handle this deployment's runs
 work_queue_name: default
 work_pool_name: null
 tags: []
-parameters: {"color": "yellow", "months": [1, 2, 3], "year": 2021}
-schedule: null
+parameters: {}
+schedule:
+  cron: 0 0 * * *
+  timezone: null
+  day_or: true
 is_schedule_active: null
 infra_overrides: {}
 infrastructure:
@@ -56,4 +59,4 @@ parameter_openapi_schema:
       type: string
   required: null
   definitions: null
-timestamp: '2023-06-08T15:41:50.657946+00:00'
+timestamp: '2023-06-09T17:43:35.969556+00:00'
