--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ week_1_basics_n_setup/1_terraform_gcp/google-cloud-cli-433.0.1-linux-x86_64.tar.
 week_2_workflow_orchestration/etl_w_gcpn_prefect/yellow_tripdata_2021-01.parquet
 week_2_workflow_orchestration/etl_w_gcpn_prefect/.prefectignore
 week_2_workflow_orchestration/etl_w_gcpn_prefect/flows/.prefectignore
+week_2_workflow_orchestration/airflow/.env
 # Folders #
 ###########
 _venv/
@@ -66,5 +67,14 @@ week_2_workflow_orchestration/prefect_intro/output.csv
 week_2_workflow_orchestration/etl_w_gcpn_prefect/flows/__pycache__/
 week_2_workflow_orchestration/etl_w_gcpn_prefect/homework/__pycache__/
 week_2_workflow_orchestration/etl_w_gcpn_prefect/homework/data/
+week_2_workflow_orchestration/airflow/logs/
+week_2_workflow_orchestration/airflow/dags/__pycache__/
+week_2_workflow_orchestration/airflow/scheduler/
 
+week_2_workflow_orchestration/prefect/02_etl_w_gcp_n_prefect/homework/__pycache__/
+week_2_workflow_orchestration/prefect/02_etl_w_gcp_n_prefect/flows/__pycache__/
+week_2_workflow_orchestration/prefect/02_etl_w_gcp_n_prefect/data/
+week_2_workflow_orchestration/prefect/02_etl_w_gcp_n_prefect/homework/data/
+week_2_workflow_orchestration/prefect/01_prefect_intro/output.csv
+week_2_workflow_orchestration/prefect/data/
 
